--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -154,4 +154,8 @@ header{
     font-size: 24px;
   }
 
+  .fa-heart{
+    font-size: 20px;
+  }
+
   
